This file documents the revision history for Perl extension Nagios::Web.

0.11_0  Fri Jan  1 20:01:12 CET 2010
          - added history page
          - fixed problem with group auth
          - fixed version in infobox

0.10_6  Wed Dec 30 14:52:49 CET 2009
          - completed showlog page

0.10_5  Sun Dec 20 00:09:43 CET 2009
          - added multi nagios backend

0.10_4  Fri Dec  4 09:50:46 CET 2009
          - completed status overview page
          - completed extinfo pages 5 and 8
          - completed outages page
          - added extinfo type 4 page
          - completed status grid page
          - completed search

0.10_3  Sat Nov 28 12:12:11 CET 2009
          - completed status hostdetail page
          - completed status servicedetail page
          - completed process info page

0.10_2  Thu Nov 19 09:10:38 CET 2009
          - completed authentication with roles from cgi.cfg
          - completed scheduling page

0.10_1  2009-11-08 16:10:34
          - added basic functions, authentication, views and models

0.01    2009-11-08 16:10:34
          - initial revision, generated by Catalyst