@@ -5,6 +5,13 @@ cgi_cfg             = cgi.cfg
 # User Default Settings
 can_submit_commands = 1
 
+# disabled some command completly 
+#command_disabled = 14 # shutdown
+#command_disabled = 35 # start executing service checks
+#command_disabled = 36 # stop executing service checks
+#command_disabled = 88 # start executing host checks
+#command_disabled = 89 # stop executing host checks
+
 # Nagios Backend Configuration
 # will be autodetected from cgi.cfg -> nagios.cfg if not set
 <Component Nagios::MKLivestatus>
